--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node sammy.js; serve -s _static -l tcp://0.0.0.0:${PORT:-8080} -n",
+    "start": "node sammy.js; serve -s _static -l tcp://0.0.0.0:${PORT:-8084} -n",
+    "dev": "node sammy.js; serve -s _static -l tcp://0.0.0.0:${PORT:-8084} -n",
     "build": "vue-cli-service build --dest _static",
     "lint": "vue-cli-service lint"
   },
